--- a/learner_journey_final_exam/20231129_Mohamed_inas_learner_journey_programming_answers.ipynb
+++ b/learner_journey_final_exam/20231129_Mohamed_inas_learner_journey_programming_answers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def get_data_final():\n",
     "\n",
-    "    data_df = pd.read_csv('/workspaces/octave_learner_journet/leraner_journey_final_exam/ds_data_set.csv')\n",
+    "    data_df = pd.read_csv('/workspaces/octave_lj_fe/learner_journey_final_exam/ds_data_set.csv')\n",
     "\n",
     "    return data_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +223,14 @@
        "[4979 rows x 8 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_df = get_data_final()\n",
-    "data_df"
+    "data_df\n"
    ]
   },
   {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "max  141.100000  172.00000  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "max  172.000000  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "max  168.400000  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "38.32659168507732"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "37.48069893552922"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "4.034445383221842"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "2.754877159778442"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "Text(0.5, 1.0, 'Correlation Heat Map - Men')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "Text(0.5, 1.0, 'Correlation Heat Map - Women')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
        "[4979 rows x 10 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
